# sirasac

./: CMakeLists.txt  LICENSE  README.md
c/: CMakeLists.txt  RandomNumber.c  RandomNumber.h  RandomSampling.c  RandomSampling.h  sirasac.c  sirasac.h
c/app/: main.c
python/: c_random_sampling.pxd  random_sampling.pyx  setup.py.in
